Circle Select tool selects faces perpendicular to the view. #77335

Closed
opened 2020-06-04 03:04:58 +02:00 by Francisco Santibañez · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: AMD Radeon(TM) Vega 6 Graphics ATI Technologies Inc. 4.5.13570 Core Profile Context 19.7.5 26.20.13001.25001

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7
Worked: (newest version of Blender that worked as expected)

Short description of error
Faces perpendicular to the view, like the faces on the sides of the cube when viewed in ortho view, are also selectable with the circle select tool.

Exact steps for others to reproduce the error

  • In the default scene, go to edit mode
  • Choose one of the othographic views (for example the top one, key 7)
  • Go to face select mode
  • Deselect all
  • With the Circle select tool, or shortcut C, select the entire cube.
    Note that the side faces are also selected
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: AMD Radeon(TM) Vega 6 Graphics ATI Technologies Inc. 4.5.13570 Core Profile Context 19.7.5 26.20.13001.25001 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Worked: (newest version of Blender that worked as expected) **Short description of error** Faces perpendicular to the view, like the faces on the sides of the cube when viewed in ortho view, are also selectable with the circle select tool. **Exact steps for others to reproduce the error** - In the default scene, go to edit mode - Choose one of the othographic views (for example the top one, key 7) - Go to face select mode - Deselect all - With the Circle select tool, or shortcut C, select the entire cube. Note that the side faces are also selected

Added subscriber: @FranciscoSantibanez

Added subscriber: @FranciscoSantibanez
Member

Added subscribers: @fclem, @Alaska

Added subscribers: @fclem, @Alaska
Member

I believe this bug has come about as the result of a recent fix that made it so selecting vertices, edges, and faces on dense meshes actually selects what you want. Previously, much of the selection would be missed.

Because this was an intentional change to Blender, this makes your bug report a feature request. For feature requests and user feedback, refer to https://wiki.blender.org/wiki/Communication/Contact#User_Feedback_and_Requests

However, @fclem, if you think something can be done about this, just say so. I believe the patch that's causing this issue is 39aa122a0e

I believe this bug has come about as the result of a recent fix that made it so selecting vertices, edges, and faces on dense meshes actually selects what you want. Previously, much of the selection would be missed. Because this was an intentional change to Blender, this makes your bug report a feature request. For feature requests and user feedback, refer to https://wiki.blender.org/wiki/Communication/Contact#User_Feedback_and_Requests However, @fclem, if you think something can be done about this, just say so. I believe the patch that's causing this issue is 39aa122a0e
Germano Cavalcante changed title from selecting perpendicular faces with the circle tool in solid mode to Circle Select tool selects faces perpendicular to the view. 2020-06-05 19:38:23 +02:00
Germano Cavalcante self-assigned this 2020-06-05 19:38:23 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This report was of low quality. I had to rewrite it all.
For future reports, here a friendly reminder to follow the guideline for making a good bug report: https://wiki.blender.org/wiki/Process/Bug_Reports

The problem here is that internally the face dots are being drawn when the Edges option of the overlay (not the selection mode) is disabled.
I think this is a remnant of the old pre 2.80 selection system.

This report was of low quality. I had to rewrite it all. For future reports, here a friendly reminder to follow the guideline for making a good bug report: https://wiki.blender.org/wiki/Process/Bug_Reports The problem here is that internally the face dots are being drawn when the `Edges` option of the overlay (not the selection mode) is disabled. I think this is a remnant of the old pre 2.80 selection system.

This issue was referenced by 70ad18b94d

This issue was referenced by 70ad18b94d1f8dde1b6ed746be37c5aa3b67c66b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77335
No description provided.