Fix T77335: Circle Select tool selects faces perpendicular to the view

Internally the face dots are being drawn when the Edges option of the
overlay (not the selection mode) is disabled.